# av-perception

./: .gitignore  README.md  main.py  pyproject.toml  setup.ps1
datasets/: config.yaml
docker/: Dockerfile
scripts/: main.py
tests/: test_data_streamer.py  test_detector.py  test_detector_inference.py
yolo_pipeline/io/: data_streamer.py
yolo_pipeline/perception/: detector.py
