[tool.poetry]
name = "diplomskanaloga"
version = "0.1.0"
description = ""
authors = ["JakovlevskaIsidora <isidora.jakovlevska@student.um.si>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
